--- a/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
@@ -123,7 +123,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/game_right"
-                android:textSize="20sp" />
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
         <RelativeLayout
@@ -142,7 +144,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="@string/game_wrong"
-                android:textSize="20sp" />
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </RelativeLayout>
     </LinearLayout>
 
