--- a/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_chengyu_dictionary.xml
@@ -93,10 +93,8 @@
         <RelativeLayout
             android:id="@+id/rl_chengyu_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp" >
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true">
 
             <ImageView
                 android:id="@+id/iv_previous"
