add music download and play function

--- a/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_main_menu.xml
@@ -46,7 +46,9 @@
             android:layout_alignParentRight="true"
             android:clickable="true"
             android:padding="10dp"
-            android:src="@drawable/ic_settings_selector" />
+            android:src="@drawable/ic_settings_selector" 
+            android:onClick="setting"
+            />
     </RelativeLayout>
 
     <LinearLayout
