--- a/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_result_layout.xml
@@ -3,8 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="5dip"
-    android:background="#1a000000"
     android:orientation="vertical" >
+
+    <ImageView
+        android:scaleType="fitXY"
+        android:layout_width="310dip"
+        android:layout_height="370dip"
+        android:src="@drawable/bg_activity" />
 
     <LinearLayout
         android:id="@+id/dictate_result_show_layout"
@@ -104,46 +109,73 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/dictate_result_show_layout"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dip"
         android:gravity="center"
-        android:orientation="horizontal" >
+        android:orientation="vertical" >
 
         <RelativeLayout
-            android:layout_width="100dip"
-            android:layout_height="75dip" >
+            android:layout_width="230dip"
+            android:layout_height="55dip" >
 
             <ImageView
                 android:id="@+id/dictate_right"
-                android:layout_width="100dip"
-                android:layout_height="75dip"
+                android:layout_width="230dip"
+                android:layout_height="55dip"
                 android:clickable="true"
+                android:scaleType="fitXY"
                 android:src="@drawable/short_btn_bg_selector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/game_right"
+                android:text="太棒了，书写正确"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
         </RelativeLayout>
 
         <RelativeLayout
-            android:layout_width="100dip"
-            android:layout_height="75dip" >
+            android:layout_width="230dip"
+            android:layout_height="55dip"
+            android:layout_marginTop="10dip" >
 
             <ImageView
                 android:id="@+id/dictate_wrong"
-                android:layout_width="100dip"
-                android:layout_height="75dip"
+                android:layout_width="230dip"
+                android:layout_height="55dip"
                 android:clickable="true"
+                android:scaleType="fitXY"
                 android:src="@drawable/short_btn_bg_selector" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:text="@string/game_wrong"
+                android:text="记下来，下次复习"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="230dip"
+            android:layout_height="55dip"
+            android:layout_marginTop="10dip" >
+
+            <ImageView
+                android:id="@+id/dictate_shared"
+                android:layout_width="230dip"
+                android:layout_height="55dip"
+                android:clickable="true"
+                android:scaleType="fitXY"
+                android:src="@drawable/short_btn_bg_selector" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="秀墨宝给小伙伴们"
                 android:textColor="@android:color/black"
                 android:textSize="20sp"
                 android:textStyle="bold" />
