--- a/ChengYuDaHuiGame/res/layout/activity_dictate.xml
+++ b/ChengYuDaHuiGame/res/layout/activity_dictate.xml
@@ -60,6 +60,14 @@
             android:src="@drawable/ic_back_selector" />
     </RelativeLayout>
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_dictate_game"
+        android:paddingBottom="5dip"
+        android:scaleType="fitXY"
+        android:src="@drawable/activity_middle" />
+
     <TextView
         android:id="@+id/dictate_pinyin"
         android:layout_width="match_parent"
@@ -240,7 +248,7 @@
         android:layout_below="@+id/dictate_word_layout"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dip"
-        android:scrollbars="vertical" >
+        android:scrollbars="none" >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -261,7 +269,9 @@
                 <com.zhaoyan.juyou.game.chengyudahui.download.NetworkCacheableImageView
                     android:id="@+id/dictate_word_image"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="2dip"
+                    android:paddingTop="2dip" />
             </LinearLayout>
 
             <TextView
@@ -395,7 +405,7 @@
         android:id="@+id/advert_layout"
         android:layout_width="match_parent"
         android:layout_height="10dip"
-        android:layout_alignParentBottom="true" >
-    </TextView>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="7dip" />
 
 </RelativeLayout>
