--- a/ChengYuDaHuiGame/res/layout/dictate_ietm.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_ietm.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="50dip"
+    android:layout_height="50dip"
     android:background="@drawable/dictate_right_item_selector"
     android:gravity="center"
     android:orientation="vertical"
