--- a/ChengYuDaHuiGame/res/layout/dictate_main.xml
+++ b/ChengYuDaHuiGame/res/layout/dictate_main.xml
@@ -63,62 +63,60 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/level_select_dictate"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/title_dictate"
-        android:background="@drawable/activity_middle"
-        android:layout_marginBottom="5dip" >
+        android:layout_below="@+id/title_dictate"
+        android:layout_marginBottom="60dip"
+        android:background="@drawable/activity_middle" >
 
-        <RelativeLayout
-            android:id="@+id/level_select_dictate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+        <Button
+            android:id="@+id/junior_level"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_above="@+id/middle_level"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/list_click_item_selector"
+            android:text="天天听故事"
+            android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/junior_level"
-                android:layout_width="300dip"
-                android:layout_height="75dip"
-                android:layout_above="@+id/middle_level"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/list_click_item_selector"
-                android:text="初级"
-                android:textSize="20sp" />
+        <Button
+            android:id="@+id/middle_level"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_centerInParent="true"
+            android:layout_marginBottom="45dip"
+            android:layout_marginTop="45dip"
+            android:background="@drawable/list_click_item_selector"
+            android:text="常用字书写"
+            android:textSize="20sp" />
 
-            <Button
-                android:id="@+id/middle_level"
-                android:layout_width="300dip"
-                android:layout_height="75dip"
-                android:layout_centerInParent="true"
-                android:layout_marginBottom="45dip"
-                android:layout_marginTop="45dip"
-                android:background="@drawable/list_click_item_selector"
-                android:text="中级"
-                android:textSize="20sp" />
-
-            <Button
-                android:id="@+id/senior_level"
-                android:layout_width="300dip"
-                android:layout_height="75dip"
-                android:layout_below="@+id/middle_level"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/list_click_item_selector"
-                android:text="高级"
-                android:textSize="20sp" />
-        </RelativeLayout>
-
-        <GridView
-            android:scrollbars="none"
-            android:id="@+id/item_select_dictate"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:horizontalSpacing="25dip"
-            android:listSelector="@android:color/transparent"
-            android:numColumns="4"
-            android:padding="10dip"
-            android:verticalSpacing="25dip"
-            android:visibility="gone" >
-        </GridView>
-
+        <Button
+            android:id="@+id/senior_level"
+            android:layout_width="300dip"
+            android:layout_height="75dip"
+            android:layout_below="@+id/middle_level"
+            android:layout_centerHorizontal="true"
+            android:background="@drawable/list_click_item_selector"
+            android:text="生僻字书写"
+            android:textSize="20sp" />
     </RelativeLayout>
+
+    <GridView
+        android:id="@+id/item_select_dictate"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_dictate"
+        android:layout_marginBottom="10dip"
+        android:background="@drawable/activity_middle"
+        android:columnWidth="50dip"
+        android:horizontalSpacing="25dip"
+        android:listSelector="@android:color/transparent"
+        android:numColumns="4"
+        android:padding="10dip"
+        android:scrollbars="none"
+        android:verticalSpacing="25dip"
+        android:visibility="gone" >
+    </GridView>
 
 </RelativeLayout>
