--- a/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/speak_game_layout.xml
@@ -5,169 +5,242 @@
     android:orientation="vertical" >
 
     <RelativeLayout
-        android:id="@+id/mode_select_layout"
+        android:id="@+id/title_top_speak"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true" >
-
-        <Button
-            android:id="@+id/local_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="10dip"
-            android:background="@drawable/list_click_item_selector"
-            android:text="@string/local_mode"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/internet_mode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/local_mode"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dip"
-            android:background="@drawable/list_click_item_selector"
-            android:text="@string/internet_mode"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/mode_setting_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        android:visibility="gone" >
-
-        <Button
-            android:id="@+id/speak_game_start"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:background="@drawable/list_click_item_selector"
-            android:text="@string/start_game"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/speak_game_time_setting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/speak_game_start"
-            android:layout_centerHorizontal="true"
-            android:background="@drawable/list_click_item_selector"
-            android:text="@string/speak_time_setting"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/local_game_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" >
+        android:layout_height="30dp"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/title_top_bg" >
 
         <TextView
-            android:id="@+id/count_down"
+            android:id="@+id/tv_jifen_speak"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentRight="true"
+            android:drawableLeft="@drawable/ic_jifen"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="0" />
+
+        <TextView
+            android:id="@+id/tv_gold_speak"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@id/tv_jifen_dictate"
+            android:drawableLeft="@drawable/ic_gold"
+            android:gravity="center_vertical"
+            android:singleLine="true"
+            android:text="0" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/title_speak"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@id/title_top_speak"
+        android:background="@drawable/title_chengyu_bg" >
+
+        <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/count_down_sample"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="成语大会"
+            android:textColor="@android:color/black"
             android:textSize="25sp"
             android:textStyle="bold" />
+
+        <ImageView
+            android:id="@+id/iv_back_speak"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:clickable="true"
+            android:padding="10dp"
+            android:src="@drawable/ic_back_selector" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_speak"
+        android:layout_marginBottom="10dip"
+        android:background="@drawable/activity_middle" >
 
         <RelativeLayout
+            android:id="@+id/mode_select_layout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@+id/count_down" >
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true" >
 
-            <TextView
-                android:id="@+id/speak_chengyu_game_name"
+            <Button
+                android:id="@+id/local_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:textSize="40sp"
+                android:layout_marginBottom="10dip"
+                android:background="@drawable/list_click_item_selector"
+                android:text="@string/local_mode"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+            <Button
+                android:id="@+id/internet_mode"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/speak_chengyu_game_name"
+                android:layout_below="@id/local_mode"
                 android:layout_centerHorizontal="true"
-                android:orientation="horizontal" >
+                android:layout_marginTop="10dip"
+                android:background="@drawable/list_click_item_selector"
+                android:text="@string/internet_mode"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="100dip"
-                    android:layout_height="50dip" >
+        <RelativeLayout
+            android:id="@+id/mode_setting_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:visibility="gone" >
 
-                    <ImageView
-                        android:id="@+id/speak_game_next"
-                        android:layout_width="100dip"
-                        android:layout_height="50dip"
-                        android:clickable="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/short_btn_bg_selector" />
+            <Button
+                android:id="@+id/speak_game_start"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginBottom="10dip"
+                android:background="@drawable/list_click_item_selector"
+                android:text="@string/start_game"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/tv_next_speak"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/game_next"
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
+            <Button
+                android:id="@+id/speak_game_time_setting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/speak_game_start"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="10dip"
+                android:background="@drawable/list_click_item_selector"
+                android:text="@string/speak_time_setting"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="100dip"
-                    android:layout_height="50dip" >
-
-                    <ImageView
-                        android:id="@+id/speak_game_right"
-                        android:layout_width="100dip"
-                        android:layout_height="50dip"
-                        android:clickable="true"
-                        android:scaleType="fitXY"
-                        android:src="@drawable/short_btn_bg_selector" />
-
-                    <TextView
-                        android:id="@+id/tv_right_speak"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:text="@string/game_right"
-                        android:textColor="@android:color/black"
-                        android:textSize="20sp"
-                        android:textStyle="bold" />
-                </RelativeLayout>
-            </LinearLayout>
+        <RelativeLayout
+            android:id="@+id/local_game_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="gone" >
 
             <TextView
-                android:id="@+id/info_for_chengyu"
-                android:layout_width="match_parent"
+                android:id="@+id/count_down"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:textSize="20sp" />
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="10dip"
+                android:background="@drawable/short_btn_bg_selector"
+                android:text="@string/count_down_sample"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/count_down" >
+
+                <TextView
+                    android:id="@+id/speak_chengyu_game_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/short_btn_bg_selector"
+                    android:textSize="60sp"
+                    android:textStyle="bold" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/speak_chengyu_game_name"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="30dip"
+                    android:orientation="vertical" >
+
+                    <RelativeLayout
+                        android:layout_width="200dip"
+                        android:layout_height="50dip" >
+
+                        <ImageView
+                            android:id="@+id/speak_game_next"
+                            android:layout_width="200dip"
+                            android:layout_height="50dip"
+                            android:clickable="true"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/short_btn_bg_selector" />
+
+                        <TextView
+                            android:id="@+id/tv_next_speak"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/game_next"
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+
+                    <RelativeLayout
+                        android:layout_width="200dip"
+                        android:layout_height="50dip"
+                        android:layout_marginTop="10dip" >
+
+                        <ImageView
+                            android:id="@+id/speak_game_right"
+                            android:layout_width="200dip"
+                            android:layout_height="50dip"
+                            android:clickable="true"
+                            android:scaleType="fitXY"
+                            android:src="@drawable/short_btn_bg_selector" />
+
+                        <TextView
+                            android:id="@+id/tv_right_speak"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/game_right"
+                            android:textColor="@android:color/black"
+                            android:textSize="20sp"
+                            android:textStyle="bold" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/info_for_chengyu"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_margin="5dip"
+                    android:background="@drawable/short_btn_bg_selector"
+                    android:textSize="16sp" />
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/internet_game_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone" >
+        <RelativeLayout
+            android:id="@+id/internet_game_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone" >
 
-        <TextView
-            android:id="@+id/internet_count_down"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:text="@string/count_down_sample"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            <TextView
+                android:id="@+id/internet_count_down"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/short_btn_bg_selector"
+                android:text="@string/count_down_sample"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+        </RelativeLayout>
     </RelativeLayout>
 
 </RelativeLayout>
