--- a/ChengYuDaHuiGame/res/layout/nifty_dialog_layout.xml
+++ b/ChengYuDaHuiGame/res/layout/nifty_dialog_layout.xml
@@ -20,7 +20,7 @@
             android:id="@+id/topPanel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#22000000"
+            android:background="#ffc6bc"
             android:orientation="vertical">
 
             <RelativeLayout
