--- a/ChengYuDaHuiGame/res/layout/story_list_item.xml
+++ b/ChengYuDaHuiGame/res/layout/story_list_item.xml
@@ -11,7 +11,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="24dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_toLeftOf="@+id/story_item_iv_icon"
+        android:singleLine="true"
         android:paddingTop="10dp"
     	android:paddingBottom="10dp"
         android:textSize="16sp"
@@ -29,5 +32,15 @@
         android:layout_marginRight="16dp"
         android:src="@drawable/game_stage_lock"
         />
+    
+<!--     <Button  -->
+<!--         android:id="@+id/story_item_iv_icon" -->
+<!--         android:layout_width="wrap_content" -->
+<!--         android:layout_height="35.0dp" -->
+<!--         android:background="@drawable/ps__button_flat_dropbox" -->
+<!--         android:layout_alignParentRight="true" -->
+<!--         android:layout_marginRight="16dp" -->
+<!--         android:text="50金币" -->
+<!--         /> -->
 
 </RelativeLayout>
